article_05/grammar.txt
program
  : expr+

expr
  : term
  | call

call
  : identifier '(' expr* (, expr)* ')'

term
  : factor ((PLUS | MINUS) factor)*

factor
  : atom ((MUL | DIV) atom)*

atom
  : number
  | '(' expr ')'
  | identifier
  | MINUS* atom

identifier
  : starting_char (id_char)*

number
  : digit+ ["."]* digit*

id_char
  : (letter | number | _)

starting_char
  : (letter | _)

digit
  : [0-9]

letter
  : [a-zA-Z]

PLUS
  : '+'

MINUS
  : '-'

MUL
  : '*'

DIV
  : '/'

MOD
  : '%'
