part_04/parser.py
from lexer import tokenize, InputStream
from ast import ProgramNode, NumberNode, BinaryOpNode, UnaryOpNode, IdentifierNode, CallExpressionNode


def parse(tokens):
    pos = 0
    token = tokens[pos]

    def get_next_token():
        nonlocal pos, token
        if not token.type == "EOF":
            pos += 1
            token = tokens[pos]

    def lookahead():
        if not token.type == "EOF":
            return tokens[pos + 1]
        else:
            return token

    def parse_program():
        ast = ProgramNode()
        while not token.type == "EOF":
            ast.children.append(parse_expr())
            get_next_token()
        return ast

    def parse_expr():
        # Expression is term
        # print(token)
        if token.type == "EOF":
            raise Exception("EOF")
        if token.type == "NUMBER" or token.type == "OPERATOR":
            return parse_term()
        if token.type == "IDENTIFIER":
            return maybe_call()

    def parse_call(name):
        args = []
        get_next_token()
        while token.value != ")":
            if token.value == ",":
                get_next_token()
            args.append(parse_expr())
        # Skip closing paren
        get_next_token()
        return CallExpressionNode(name, args)

    def parse_term():
        node = parse_factor()
        while token.value in ("+", "-"):
            op = token
            get_next_token()
            node = BinaryOpNode(
                node, op, parse_factor())
        return node

    def parse_factor():
        node = parse_atom()
        if token.type == "NUMBER":
            get_next_token()
        while token.value in ("*", "/"):
            op = token
            get_next_token()
            node = BinaryOpNode(
                node, op, parse_factor())
        return node

    def parse_atom():
        if token.type == "OPERATOR":
            op = token
            get_next_token()
            return UnaryOpNode(op, parse_atom())
        if token.type == "NUMBER":
            return NumberNode(
                token.value)
        if token.value == "(":
            get_next_token()
            node = parse_expr()
            if token.value == ")":
                get_next_token()
            return node
        if token.type == "IDENTIFIER":
            return IdentifierNode(token.value)

    def maybe_call():
        name = token
        next = lookahead()
        if next.value == "(":
            get_next_token()
            return parse_call(name)
        return parse_atom()

    return parse_program()
